# django-granular-permissions

./: .editorconfig  .pylintrc  README.md  pyproject.toml
granular_permissions/: apps.py  mixins.py  models.py
test_app/: admin.py  models.py  serializers.py  views.py
test_app/migrations/: 0001_initial.py
test_project/: settings.py  urls.py
